# personal_utils

./: README.md  setup.cfg
seamove/: __init__.py  __main__.py  cmove.py
