[metadata]
name = personal_utils
version = 0.0.1
author = Benjamin Hallenrud

description = Small useful progrms
long_description = file: README.md, LICENSE

license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:

install_requires =
    rich>=12.4.4

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    cmove   = seamove.cmove:main
    seamove = seamove.cmove:main
